CURSO_AVANZADO/Proyecto/proyecto_final/yaml-files/medicall-ingress.yaml
#medicall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicall-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ms-citas
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ms-citas-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
