CURSO_AVANZADO/Proyecto/proyecto_final/yaml-files/ms-citas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: miapp.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ms-citas-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
